--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -1,5 +1,5 @@
 ---
-title: Matching the Time of Emergence of Transboundary Fish species to Lead Time for Policy Response Under Climate Change
+title: Identifying Shifts in the Share Distribution of Transboundary Fish Stocks to Lead Time for Policy Response Under Climate Change
 subtitle: Challenges to transboundary fisheries under climate change
 author: 'Authors: Juliano Palacios-Abrantes*^1^, Thomas Frölicher^2^, Gabriel Reygondeau^13^, U. Rashid Sumaila^1^, Colette Wabnitz^14^, and William W.L. Cheung^1^'
 date: 'Affiliations: ^1^Institute for the Oceans and Fisheries, University of British Columbia, Vancouver, Canada. ^2^Climate and Environmental Physics, Physics Institute, University of Bern.'
@@ -55,67 +55,86 @@ my_lib(packages)
 
 ## Introduction
 
-Over the last century human activities have fundamentally changed the physicochemical composition of the ocean, warming the waters, decreasing the pH and reducing the oxygen concentration [@IPCC:2019tn]. As a consequence, many marine species have changed their distribution [@Poloczanska:2016kk] and will continue to do so in the search of the appropriate environmental conditions needed for their subsistence [@Cheung:2010dt]. Climate change is expected to impact fisheries production worldwide compromising our capacity to reach international sustainability goals such as the SDG 14 - life below water [@UnitedNations2018; @Cheung:2010dt; @Barange:2014kr]. Such impacts can be partly offset with the proper reform of current fisheries management [@Gaines:2018sg; @Cheung:2018dh]. However, these reforms will require comprehensive plans and institutions to manage species that cross international borders, also known as shared stocks [@Gaines:2018sg; @Pinsky:2018cb].
+Over the last century, human activities have fundamentally changed the physico-chemical composition of the ocean, substantially warming the waters, decreasing the pH and reducing oxygen concentration [@IPCC:2019to]. Throughout the ocean, marine species are distributed according to preferences in given environmental parameters (e.g., salinity, temperature, oxygen) [@Hutchinson:1957nt; @Nelson:2016kk]. As a result of climate change, many marine species have changed their distribution towards higher latitude, deeper water or following local environmental gradients [@Poloczanska:2016kk]. Biogeography of marine species is projected to continue to shift as ocean conditions continue to change in the 21st century under climate change [@Cheung:2010dt]. Climate change is expected to impact fisheries production, compromising our capacity to reach international sustainability goals such as Sustainable Development Goal 14 - life below water [@UnitedNations2018; @Cheung:2016Sci; @Barange:2014kr; @Singht:2019]. The projected risks of impacts can be reduced through improving the effectiveness of current fisheries management [@Gaines:2018sg; @Cheung:2018dh], including managing fisheries on species that cross international borders, i.e., shared stocks [@Gaines:2018sg; @Pinsky:2018cb].
 
-In the early 1980’s the United Nations officialized the concept of Exclusive Economic Zone (EEZs) through the Law of the Sea (UCLOS) [@UnitedNations:1986tl], partitioning the distribution of several species, thus, creating what we know today as shared stocks. As defined by the Food and Agriculture Organization, shared stocks can be classified in three non-exclusive categories. (*i*) Transboundary, those that cross neighboring EEZs; (*ii*) straddling, that, in addition to neighboring EEZs, also visit the adjacent high seas; and (*iii*) highly migratory, mainly tunas and bill-fishes that cover vast oceanic regions [@Munro:2004th]. While countries are responsible for the management of stocks within their EEZs, UNCLOS encourages actions to cooperate when stocks are shared [Article 63, @UnitedNations:1986tl]. Today, an estimate of 633 transboundary fish species are found in different continents and across multiple habitats averaging 48.5 million tones and representing USD 78 billion in fishing revenue between 2005 and 2010 (Chapter Two).
+The concept of shared stocks were developed following the ratification of  the United Nations Convention on the Law of the Sea (UNCLOS) and the claiming of Exclusive Economic Zones (EEZs) by States [@UnitedNations:1986tl]. As defined by the Food and Agriculture Organization, shared stocks can be classified into three non-exclusive categories: (*i*) transboundary, those that cross neighboring EEZs; (*ii*) straddling, that, in addition to neighboring EEZs, also visit the adjacent high seas; and (*iii*) highly migratory, mainly tunas and bill-fishes that cover vast oceanic regions [@Munro:2004th]. While countries are responsible for the management of stocks within their EEZs, under UNCLOS, States are encouraged to cooperate when stocks are shared [Article 63, @UnitedNations:1986tl]. A recent study estimates that, globally, there are 633 transboundary fish species, yielding an average 48.5 million tonnes of catch and USD 78 billion in fishing revenue, per year, between 2005 and 2010 [@PalaciosAbrantes:2020tv]. 
 
-The management, and thus sustainability, of fisheries that target shared species is jeopardized as marine species shift their known distribution to cope with a changing world [@Pinsky:2018cb]. Frequently, the rules placed to manage these species are set to historical trends [@Baudron:2020dj] and do not necessarily consider the biogeography of species [@FredstonHermann:2018kp], nor the effects of climate change (Chpater One). Misalignment between policies and distributional shifts have previously resulted in unsustainable harvest and international conflict [@Miller:2013iv; @Song:2017va; @Spijkers:2017ij] and are expected to continue towards the end of the $21^{st}$ century. Thus, there is a need to understand the time when climate change will affect the sharing distribution of these species as well as the intensity in order to prepare ocean governance to species on the move [@Pinsky:2018cb; @Link:2010ei, Chpater One].
+The effectiveness of managing fisheries targeting shared stocks is challenged by the shifts in marine species distribution under climate change [@Pinsky:2018cb; @Pinsky:wq]. In many cases, catch or fishing effort quota on shared stocks are based on historical records, [@Baudron:2020dj] and do not necessarily consider the biogeography of the species [@FredstonHermann:2018kp], nor the effects of climate change in the fish stocks and fisheries [@PalaciosAbrantes:2020tv]. Misalignment between fisheries resources allocation and species’ distributional shifts have previously resulted in unsustainable harvest and international disputes [@Miller:2013iv; @Song:2017va; @Spijkers:2017ij], patterns that are expected to be exacerbated by worsening climate change [@Pinsky:2018cb]. With future shifts in species distributions under climate change, the challenges posed on shared stocks fisheries management will continue to increase in the $21^{st}$ century. Thus, there is a need to understand the time when climate change will affect the sharing distribution of these species as well as the intensity in order to prepare ocean governance to species on the move [@Pinsky:2018cb; @PalaciosAbrantes:2020tv; @Link:2010ei]. 
 
-Here we endeavor to address this gap by estimating the Time of Emergence (ToE) [@Hawkins:2012hc] and Stock Share Ratio (SSR) (Chapter Four) of 633 transboundary species worldwide. We define ToE as the time when a change  of a particular variable exceeds the historical natural internal variability [@IPCC:2019tn], a concept previously used to investigate the emergence of multiple oceanic physical and biogeochemical variables [@Rodgers:2015jq; @Keller:2014jv; @Frolicher:2016dg; @Cheung:2020ja]. Moreover, SSR is adopted from Game Theory as a proxy of thread point - the minimum payoff a player is willing to receive in order to cooperate with others [@Sumaila:2020tp; @Sumaila:2013hv].  We rely on a species distribution model driven by output from an Earth system model with ten ensemble members to project the distribution of the 663 selected shared species (Chpater One) by 280 EEZs of 198 coastal countries under a high greenhouse gas emission scenario RCP8.5 (See methods). We treated each species in an EEZ as a single stock due to a lack of more detailed spatial data (Chpater One) and only considered shared species between neighboring EEZs, rather than the species’ extended distribution (e.g. we did not include the high seas). Our results suggest that many shared species have already emerged and shifted their SSR in most neighboring EEZs posing a threat to the sustainability of shared stocks and the resilience of international treaties. 
+We propose that adapting the concepts of "Time of Emergence" (ToE) and “Thread Point” (TP) can help address some of the management challenges imposed by shifting species. Roughly, ToE is defined as the moment in time when an anthropogenic change signal (e.g., future trend) rises above the background noise of natural variability (e.g., historical variation) [@IPCC:2019tn]. This concept has been applied to investigate the emergence of multiple oceanic physical and biogeochemical variables [@Roggers:2015jq; @Keller:2014jv; @Frolicher:2016dg; @Cheung:2020ja; @Schlunegger:2020gz; @Schlunegger:2019el; @Henson:2017ev]. The premise behind ToE is that we can only be confident that a significant change has been detected when the signal of anthropogenic climate change is larger than the background of natural climate variability [@Hawkins:2012hc]. The concept of thread point (TP) comes from game theory and is defined as the minimum payoff a player is willing to receive to cooperate in a game theoretic model [@Nash:1953vr]. Game theory has been widely used to investigate and manage shared stocks [@Sumaila:2013hv]. Specifically, Sumaila et al., *in press* applied this concept to understand the impacts of climate change to the economics of shared species between Canada and the United States. 
 
+Here, we estimate the ToE and TP of the share distribution of transboundary stocks worldwide. We rely on a species distribution model driven by output from an Earth system model with ten ensemble members to project the distribution of the 663 selected shared species [@PalaciosAbrantes:2020tv] by 280 EEZs of 198 coastal countries under a high greenhouse gas emission scenario RCP8.5 (see Methods). We treated each species in an EEZ as a single stock due to the lack of more spatially resolved data [@PalaciosAbrantes:2020tv] and only considered shared stocks between neighboring EEZs (i.e., we did not include the high seas). Our results suggest that many shared stocks have already ‘emerged’ and overpassed their share TP in most neighboring EEZs posing a threat to the sustainability of shared stocks and the resilience of international treaties. 
 
 ## Materials and methods
 
 ### Databases and species selection
 
-We included in this analysis 633 marine exploited transboundary species previously identified by representing 80% of the catch taken from the world’s EEZs between 2005 and 2014 (Chapter Two). Each species within an EEZ was considered a single stock unit due to a lack of more detailed spatial information per exploited population [@Teh:2015gd, Chpater One]. We defined the boundaries of the world EEZs using the *Sea Around Us* spatial division (updated 1 July 2015, available from http://www.seaaroundus.org) noting that it subdivides the EEZs of 198 coastal states into 280 regions (e.g., Mexico’s EEZ is divided in Mexico Pacific and Mexico Atlantic; Figure \@ref(fig:FigureS1)) including islands territories, and determined the intersections between polygons using the R package sf [@PackagesfSimpleF:2018vp]. Each EEZ was attributed to a geopolitical region according to the UN and biome [@Reygondeau:2019uh], and species were attributed a habitat preference according to FishBase. For each species and EEZ we used the *Sea Around Us* data to estimate the catch and fishing revenue from fishing activities within the global EEZs. We report both catch and revenue the average from the last decade (2005-2014) of available spatial data [@Zeller2016; @Tai2017; @Sumaila:2015uc]. The monthly average US Consumer Price Index (CPI) according to the U.S. Bureau of Labor Statistic (https://www.bls.gov/cpi/) was used to convert the original 2010 real USD value to 2019 real USD.
+This analysis includes 633 marine exploited transboundary species previously identified to account for 80% of the catch taken from the world’s EEZs between 2005 and 2014 [@PalaciosAbrantes:2020tv]. Each species shared by a pair of neighbouring EEZs was considered a transboundary stock [@Teh:2015gd; @PalaciosAbrantes:2020tv]. We defined the boundaries of the world’s EEZs using the *Sea Around Us* spatial division (updated 1 July 2015, available from http://www.seaaroundus.org), noting that it subdivides the EEZs of 198 coastal states into 280 regions (e.g., Mexico’s EEZ is divided into Mexico Pacific and Mexico Atlantic; Figure \@ref(fig:FigureS1)) including island territories. We determined the intersections between polygons using the *R*-statistical software package *sf* [@PackagesfSimpleF:2018vp]. Each EEZ was categorized by the geopolitical regions and natural biomes according to the United Nations and by natural biome [@Reygondeau:2019]. Habitat preference of each species was determined based on information available from FishBase (http://www.fishbase.org). For each species and EEZ, we used the *Sea Around Us* data to estimate catch and fishing revenue from fishing activities within global EEZs. We report both average catch and revenue for the last decade (2005-2014) [@Zeller2016; @Tai2017; @Sumaila:2015uc]. The monthly average US Consumer Price Index (CPI) according to the U.S. Bureau of Labor Statistic (https://www.bls.gov/cpi/) was used to standardize all monetary values to 2019 real USD.
+
 
 ### Projecting species distributions under climate change
 
-We projected the distribution of marine species using a dynamic bioclimatic envelope model (hereafter called DBEM) [@Cheung:2010dt; @Cheung:2016jd]. The DBEM algorithm includes species physiology, habitat suitability, depth and latitudinal ranges, and spatial population dynamics as well as preferences to sea temperature, salinity, oxygen content, sea ice extent (for polar species) and bathymetry. For pelagic species, the model uses environmental variables at the surface (e.g. sea surface temperature) whereas demersal species distribution are driven by ocean-bottom variables (e.g. bottom temperature). This way, the model estimates species abundance and maximum catch potential (a proxy of maximum sustainable yield) over a $0.5^{\circ}$ x $0.5^{\circ}$ grid of the world (See Cheung *et al.* [-@Cheung:2010dt; -@Cheung:2016jd] for model details).
+We projected the distribution of marine species using a dynamic bioclimatic envelope model (hereafter called DBEM) [@Cheung:2010dt; @Cheung:2016jd]. The DBEM  represents species’ physiology, habitat suitability, depth and latitudinal ranges, and spatial population dynamics as well as preferences to sea temperature, salinity, oxygen content, sea ice extent (for polar species) and bathymetry. For pelagic species, the model uses environmental variables at the surface (e.g., sea surface temperature) whereas demersal species distribution are driven by ocean bottom variables (e.g., bottom temperature). This way, the model estimates species abundance and maximum catch potential (a proxy of maximum sustainable yield) over a $0.5^{\circ}$ x $0.5^{\circ}$ grid of the world (see Cheung *et al.* [-@Cheung:2010dt; -@Cheung:2016jd] for model details).
 
-We forced the DBEM with environmental data from a ten ensemble member simulation of  the Geophysical Fluid Dynamics Laboratory Earth system model (GFDL-ESM2M) to project species distribution from 1951 to 2100 [@Dunne:2012bo; @Dunne:2013db]. The GFDL ESM2M is run under historical forcing till 2005 and follows the high ” climate change emission scenario, the Representative Concentration Pathway 8.5 (RCP 8.5) over the 2006-2100 period [@Riahi:2011dk]. In GFDL-ESM2M, the atmospheric surface temperature is projected to increase by $3.2^{\circ}C$ by 2081-2100, relative to preindustrial levels. Because the main approach of this paper relies on understanding the spatial and temporal variation of a species distribution, we have to understand both the historical as well as the future climate-driven distribution variability, in order to infer the differences. We do this by following an ensemble member approach where each member constitutes a different realization of the Earth system variability condition [@Rodgers:2015jq; @Frolicher:2009ge]. Thus, for our experiment, each of the ten GFDL-ESM2M-ensembles were started from infinitesimally different Earth system initial conditions resulting in a unique atmosphere and ocean state at each point in time. Following this approach allows us to estimate the natural internal variability (e.g. background noise) and isolate the forced climate signal of a stock’s distribution by averaging the secular trend over all ten ensemble members.
+We forced the DBEM with environmental data from a ten ensemble member simulation of the Geophysical Fluid Dynamics Laboratory Earth system model (GFDL-ESM2M) to project the distributions of the 633 species from 1951 to 2100 [@Dunne:2012bo; @Dunne:2013db; @Rodgers:2015jq]. The GFDL-ESM2M is run under historical forcing until 2005 and follows the ‘high’ climate change emissions scenario, the Representative Concentration Pathway 8.5 (RCP 8.5) over the 2006-2100 period [Riahi:2011dk]. In GFDL-ESM2M, atmospheric surface temperature is projected to increase by $3.2^{\circ}C$ by 2081-2100, relative to preindustrial levels. Because the main approach of this paper relies on understanding the spatial and temporal variation of a species’ distribution, we have to understand both the historical as well as the future climate-driven distribution variability, to infer differences between time frames. We do this by following an ensemble member approach where each member constitutes a different realization of the Earth system variability condition [@Rodggers:2015jq; @Frolicher:2009ge]. Thus, for our experiment, each of the ten GFDL-ESM2M-ensembles were started from infinitesimally small differences in Earth system initial conditions resulting in a unique atmosphere and ocean state at each point in time. This approach allows us to estimate the natural internal variability (e.g., background noise) and isolate the forced climate signal of a stock’s distribution by averaging the secular trend over all ten ensemble members.
 
-### Estimating the Time of Emergence of transboundary species
+### Calculating an index of transboundary range shift
 
-Knowing the time (e.g. year) in which a shared stock is going to diverge from the natural internal variability is key for preparing to shifting stocks [@Link:2010ei]. Here, we coupled the DBEM with the ten GFDL ensemble members described above, and developed an index of transboundary range shift, fisheries and climate change (TI). The index is based on the variation of a species distribution centroid in relation to the centroid of the neighboring EEZs it occupies. Each species centroid was determined by the average latitude and longitude of the grid cells containing the top 10% abundance percentile of each year derived from the DBEM. The EEZ centroid was estimated using the st package of R statistical software (Figure \ref{fig:FigureS1}). For each ensemble member, neighboring EEZ and species, we computed the distance between centroids assuming a perfect sphere and ignoring geographic barriers using the geosphere package of R statistical software;
+We developed an index to evaluate range shifts in transboundary stocks under climate change (TI). This index is based on the shifts in the distribution centroid of a transboundary stock relative to the centroid of the neighboring EEZs that share this stock (Figure \ref{fig:FigureS2}). The centroid of a transboundary stock was determined by the average latitude ($lat_{ts}$) and longitude ($lon_{ts}$) across the grid cells with the highest abundance within the neighboring EEZs sharing the stock e.g., sockeye salmon (*Oncorhynchus nerka*) that is transboundary between the United States and Canada. Therefore,
 
-$$D_{ens} = acos(sin(lat_{eez})*sin(lat_{spp}) + cos(lat_{eez})*cos(lat_{spp})*cos(lon_{eez}-lon_{spp}))$$
-where $lat_{eez}$ and $lat_{spp}$ are the latitudes of the EEZ and specie centroid, respectively and $lon_{eez}$ and $lon_{spp}$ are the respective longitudes.
+$lat_{ts} = \mu (lat_{per})$
+
+$lon_{ts} = \mu (lon_{per})$
+
+where $lat_{per}$ and $lon_{per}$ are the latitudes and longitudes of the grid cells holding the $per^{th}$ percentile of the projected transboundary stock abundance. To focus on areas where transboundary stocks are more abundant and fishing activities are more likely to take place, we included grid cells where the projected stock abundance within the neighbouring EEZs sharing the stock was above the top $10^{th}$ percentile (e.g., *per* = 10%). We ran a sensitivity analysis (e.g. *per* = 20, 50, 90) to relax this parameter (Figure \ref{fig:FigureS2}). The centroid of a EEZ was estimated using the *st* package in *R* (version 3.2.1) (Figure \ref{fig:FigureS1}). For each ensemble member, neighboring EEZs and transboundary stock, we computed the distance between centroids assuming the earth is a perfect sphere and ignoring geographic barriers using the geosphere package in *R*;
+
+
+$$D_{ens} = acos(sin(lat_{eez})*sin(lat_{ts}) + cos(lat_{eez})*cos(lat_{ts})*cos(lon_{eez}-lon_{ts}))$$
+where $lat_{eez}$ and $lat_{ts}$ are the latitudes of the EEZ and transboundary stock centroids, respectively and $lon_{eez}$ and $lon_{ts}$ are the respective longitudes.
 
 Then, for each year we calculated the transboundary index as follows:
 
 $$TI =(\frac{D_{A,t}}{sd(D_{A,th})} - \frac{D_{B,t}}{sd(D_{B,th)}})^2$$
 
-where $D_A$ and $D_B$ represent the distance between EEZ and distribution centroids of a species in EEZs A and B, respectively for each time step from 2006 to 2100 (t); sd is the standard deviation of the historical (*th*, 1951 - 2005) centroid distribution for $D_A$ and $D_B$. The index was then smoothed to a 10 years average. Finally, we determined the time of emergence following Rodgers et al. (2015):
+where $D_A$ and $D_B$ represent the distance between the distribution centroids of a species and the centroid of the pair of neighbouring EEZs (A and B) sharing the species for each time step from 2006 to 2100 (*t*); and *sd* is the standard deviation of the historical (*th*, 1951 - 2005) centroid distribution for $D_A$ and $D_B$. Thus, a higher TI means that a shared species becomes more or less abundant relative to its neighbouring EEZs that is beyond what the fisheries experienced historically. From the perspective of a state’s fisheries, higher TI indicates an increase in the challenges to the effective management and sustainability of the shared species’ fisheries. In contrast, a smaller TI suggests that the sharing of the species between neighbouring EEZs is becoming relatively more stable; a condition that favours effective management and sustainability of the shared species’ fisheries. The index was smoothed to a 10 year average to xxx. 
 
-$$ToE = TREND/NOISE$$
+#### Calculating the Time-of-Emergence of the transboundary index
 
-where *TREND* is the yearly mean *TI* ($\mu$) of all ten ensemble members and *NOISE* is the standard deviation of the TREND ($\sigma$) between 1951 and 2005. 
-<!-- Note that in some cases not all ensemble members show the presence of a species in a certain EEZ throughout the study's time frame. We presented the results only for those cases where all 10 ensemble members had results for each year between 1951 and 2100 (n = 150). -->
+Knowing the point in time (e.g., year) at which the distribution of a shared stock will diverge from its natural internal variability is important in informing the lead-time to which climate adaptation in transboundary fisheries management needs to be implemented [@Link:2010ei]. Thus, we define ToE as the time when the shared stock between neighbouring EEZs will exceed the historical natural internal variability as follows:
 
-We estimated the mean and one standard deviation ($\mu \pm \sigma$ for a confidence interval of 68%) to show the first year when the “signal” of the transboundary index overpasses the historic “noise”. Since this was an arbitrary decision, we have included also a more conservative estimation in the supplements ($\mu \pm 2*\sigma$ for a 95% confidence interval). The ToE for both bottom and surface sea temperature was also estimated for statistical analysis following the SNR method.
+$EmergenceTIndex = \frac{\mu_{TI[t]}}{SD_{TI_{th}}}$
+$ToE = t when Emergence index[t] > 1$
 
-#### Vulnerability index
+where $\mu_{TI}$ is the yearly mean TI ($\mu$) across all ten ensemble members in year *yr* and $SD_{TI}$ is the standard deviation of the smoothed (10-year moving average) TI across the ensemble members for the historical reference period (1951 - 2005). We set a threshold of TI above which we consider a shared stock to have emerged from the historical internal variability of the TI. The threshold was set as one standard deviation of the variability ($SD_{TI}$) (i.e., eq. **x**, representing a probability of 68% that the transboundary index has emerged from historical variability). We tested the sensitivity of the calculated emergence index to  a higher emergence threshold of two times the standard deviation (i.e., representing a probability of 95% that the index has emerged).
 
-We created a vulnerability index of fisheries management to shifts in transboundary species. The index is based on two factors; the ToE and the importance of the shifting species to a country's total catch and revenue from transboundary species;
+
+#### Computing a transboundary fisheries vulnerability index
+
+We created a country-specific index to examine the risk of impacts of species’ range shifts on transboundary fisheries management. The index reflects both the rate of change of shared stocks’ distribution (indicated by the time-of-emergence of the transboundary index) and the importance of the shifting species to a country’s total catch and revenue from the species. The index is calculated from:
 
 $$ index' = (P_c + P_v)/ToE $$
-where *P_c* and *P_v* are the proportion that the shifting species' will have in the total catch and value generated from transboundary fisheries within a county's EEZs, respectively. Here, total catch and value are represented as the average of 2005 to 2014 within the global EEZs according to the *Sea Around Us*. The index was then normalized to a 0 to 1 scale going from less vulnerable to more vulnerable:
 
-$$ index = \frac{(index' - N_{min})}{N_{max}-N_{min}} $$
+where *P_c* and *P_v* indicate the proportion accounted for by shared species in total catch and value generated from transboundary fisheries within a country’s EEZ, respectively. Here, the proportion of total catch and value are represented as the average of 2005 to 2014 within individual EEZs according to the *Sea Around Us*. The index was then normalized to a 0 (less vulnerable) to 1 (more vulnerable) scale.
 
-### Changes in transboundary Species Share Ratio
+### Estimating the threat point of transboundary stock share 
 
-We adopted the concept of threat point as the minimum proportion of the species’ joint distribution between neighboring EEZs that each country will accept if they were to cooperate in the management of the stock (Chapter Four). For each species and time step (1951-2100) we first aggregate the number of $0.5^{\circ}$ x $0.5^{\circ}$ grid cells where the species was present within neighboring EEZs, and then calculated the proportion that each EEZ had Chpater One. We then average the results in three time periods in order to reduce climate variability within the projections. The first time period ($t_h$) comprises (1951 - 2005) and is assumed as the historic share distribution of each species, thus, representing each neighboring nation's threat point. This time frame matches the historic climate data that the GFDL uses to project climate change [@Dunne:2012bo; @Dunne:2013db]. We then selected two future periods; early $21^{st}$ century as the average of 2021 to 2040 ($t_e$), and mid $21^{st}$ century as the average of 2041 to 2060 ($t_m$). We choose these time periods to match the challenges of achieving fisheries-related UN-SDGs [@UnitedNations2018] such as SDG 14.4 (end overfishing) and SDG 1.2 (poverty reduction), aimed to be achieved by 2020 and 2030, respectively [@Singh:2017ds]. The analysis was replicated for each of the ten ensemble members capturing the variation by averaging results among ensemble members ($\mu \pm \sigma$). We then estimate the percentage change in the SSR ($\Delta{SSR}$) of each future time period ($SSR_{f}$) relative to the historic time period ($SSR_h$) as follows,
+In game theory, cooperation over a shared resource will more likely result in a better overall outcome for the sharing parties than operating on a non-cooperative basis [@Munro:1980sd]. However, the benefits that each player gets from a cooperative strategy must be above a minimum payoff i.e., *Threat Point* (TP) [@Sumaila:2013]. Here, we define TP as the minimum proportion of a shared stock within an EEZ that a country will accept to engage in cooperative management with the country’s sharing neighbour [@OCPalacios; @OCSumaila]. Any proportion below the defined threat point of a country would result in a deflection from the joint management of the shared stock. 
+
+
+
+First we estimated the stock share ratio (SSR) for each species and year (1951-2100) by aggregating the number of $0.5^{\circ}$ x $0.5^{\circ}$ grid cells in which the species is present across neighboring EEZs, and then calculated the proportion of the stock held within each EEZ [@PalaciosAbrantes:2020tv]. Second, we average the calculated proportion of stock within an EEZ held into three time periods to reduce the effects of inter-annual climate variability. The first time period ($t_h$) spans 1951 to 2005 and matches the historical period in the GFDLESM-2M simulations, over which the model was forced with observation-based greenhouse gas, aerosol and natural external forcing [@Dunne:2012bo; @Dunne:2013db]. It is assumed as the historic baseline of shared distributions for each species. We then selected two future periods; early $21^{st}$ century as the average of 2021 to 2040 (*te*), and mid $21^{st}$ century as the average of 2041 to 2060 (*tm*). We chose these time periods to match the challenges of achieving fisheries-related UN-SDGs [@UnitedNations2018] such as SDG 14.4 (end overfishing) and SDG 1.2 (poverty reduction), to be achieved by 2020 and 2030, respectively [@Singh:2017ds]. The analysis was replicated for projected species distributions from each of the ten ensemble members and results were averaged across ensemble members. Third, we estimated the percentage change in the SSR ($\Delta{SSR}$) of each future time period ($SSR_f$) relative to the historic time period ($SSR_h$) following Palacios-Abrantes et al. (*in press*),
+
+
 
 $$ \Delta{SSR_{e,m}} = \frac{(SSR_{f}-SSR_{th})}{SSR_{th}}* 100 $$
-To address the natural spatial variability of the stock we only considered $\Delta{SSR_{e,m}}$ to be true when $SSR_f \geq (SSR_f + \sigma)$ or $SSR_f \leq (SSR_f - \sigma)$.
 
+$TP = \Delta{SSR}_{e,m} < μ±σ$
+
+Finally, the TP of each EEZ was calculated when $\Delta{SSR_{e,m}}$ is beyond one standard deviation of the historical distribution i.e., when $SSR_f \geq (SSR_f + \sigma)$ or $SSR_f \leq (SSR_f - \sigma)$.
 
 ### Statistical analysis
 
-We tested the results for normality (e.g. skewness, kurtosis) and performed a couple of non-parametric Kruskal–Wallis test by ranks [@Hollander:2013wz] to investigate geopolitical and ecological differences in the ToE of transboundary species. 
+We tested the results for normality (e.g. skewness, kurtosis) and performed a couple of non-parametric Kruskal–Wallis test by ranks [@Hollander:2013wz] to investigate geopolitical and ecological differences in the ToE of transboundary species. Specifically, we tested if the habitat association of transboundary species and the geographic location of EEZs would have any effect on the time of emergence of transboundary stocks. For both cases, our null hypothesis was that there were no significant differences in the time of emergence across habitat association nor EEZs.
 <!-- Moreover, we implemented a multiple linear regression analysis to a series to explain the ToE of each species in each EEZ. Specifically, we looked at habitat preferences, catch trends, geopolitical and biome location and ToE of both bottom and sea surface temperature (See *Databases and species selection*). We hypothesize that all of these factors would have significant influence in the ToE of transboundary species. -->
 All analyses were run using the statistical software *R version 3.5.2 (2018-12-20; Eggshell Igloo)* with the packages *data.table* [@Packagedatatable:2019uh], *janitor* [@PackagejanitorSim:2018ur], *rfishbase* [@PackagerfishbaseR:2019th], *sf* [@PackagesfSimpleF:2018vp], *sp* [@PackagespClasses:2019tn], *tidiverse* [@PackagetidyverseE:2017vq], *tidytext* [@PackagetidytextTe:2019vk], *gmt* [@gmt] and *zoo* [@PackagezooSInfr:2019tm], *readxl* [@REF], *ggrepel* [@REF], *zeallot* [@REF], *viridis* [@REF], *cowplot* [@REF], *moments* [@REF] and *pgirmess* [@REF]. All code is available at https://github.com/jepa/TransEmergence
 
@@ -258,7 +277,7 @@ We have identified three main sources of uncertainty in our analysis and point o
 
 ## Conclusion
 
-Global society has set the ambitious goal to manage all fisheries sustainably with no overfishing (SDG 14 – Live below water) [@UnitedNations2018] in the incoming years, which in turn will have direct repercussion in others [@Singh:2017ds]. Preparing policy to species on the move is key to achieve these sustainable development goals and proper governance of the world fisheries [@Pinsky:2018cb]. Here, we have addressed two fundamental steps to achieve sustainable international fisheries under a changing world [@Link:2010ei]. We have identified the transboundary species that will see a shift in shared distribution, the year in which such distribution will shift, as well as the degree of change. Our results have direct implications for ocean governance. By identifying the time, degree, and location by which transboundary species will change from a historical normal we provide critical information for regional management bodies and countries to anticipate the potential complications that climate change will bring to international fisheries management. While our results are not free of uncertainty and would benefit from more detailed analysis at local levels, they represent a crucial approximation towards preparing ocean governance for species on the move [@Pinsky:2018cb; [@Gaines:2018sg, Chapter One]. To address the issues raised in this paper, international fisheries management will require coordination between nations to generate adaptive, collaborative and equitable management strategies to address the uncertainties of a changing world.
+Global society has set the ambitious goal to manage all fisheries sustainably (SDG 14 – Life below water) [@UnitedNations2018] by 2030; achieving this goal would have clear effects on multiple  others [@Singh:2017ds]. Preparing anticipatory policy to species on the move is key to achieve these sustainable development goals and effective governance of the world’s fisheries [@Pinsky:2018cb]. Here, we have addressed two fundamental steps to achieve sustainable international fisheries in a changing world [@Link:2010ei]. We have identified the transboundary species that will see a significant shift compared to their historical average in shared distribution, the year in which their distribution will undergo such a shift, as well as the degree of change. Our results have direct implications for ocean governance as the data provided  can inform and be used by regional management bodies and countries to anticipate the potential complications brought about by  climate change to international fisheries management. While future studies, specifically at more localized scale, will provide valuable nuance in designing effective policies, our  results provide an important baseline on which to build when preparing ocean governance for species on the move [@Pinsky:2018cb; [@Gaines:2018sg; @PalaciosAbrantes:2020tv]. To address the issues raised in this paper, international fisheries management will require coordination between nations to generate adaptive, collaborative and equitable management strategies to address the uncertainties of a changing world.
 
 ## Supplements
 
